--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Have fun.
   </footer>
   <script src="index.js" type="text/javascript"></script>
 </body>
